# HarmonyBox

./: .gitignore  README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
build-box64/: build-box64.sh  build-libarchive.sh  patches.sh
entry/libs/arm64-v8a/: libffi.so.8.1  libwayland-client.so.0  libwayland-egl.so.1  libwayland-server.so.0
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  client_context.h  client_napi.cpp  client_napi.h  egl_renderer.cpp  egl_renderer.h  fps_counter.h  fs_utils.cpp  fs_utils.h  input_window_napi.cpp  input_window_napi.h  napi_init.cpp  napi_utils.cpp  napi_utils.h  plugin_manager.cpp  plugin_manager.h  process_manager.cpp  process_manager.h  process_runner.cpp  process_runner.h  viewporter-protocol.c  wayland_server.cpp  wayland_server.h  wineprefix_setup.cpp  wineprefix_setup.h  xdg_shell.cpp
entry/src/main/cpp/include/: viewporter-server-protocol.h  xdg-shell-server-protocol.h
entry/src/main/cpp/shell/: shell_dispatcher.cpp  shell_dispatcher.h  shell_engine.cpp  shell_engine.h  shell_env.cpp  shell_env.h  shell_jobs.cpp  shell_jobs.h  shell_napi.cpp  shell_napi.h  shell_output.cpp  shell_output.h  shell_path.cpp  shell_path.h  shell_process.cpp  shell_process.h  shell_readline.cpp  shell_readline.h  shell_session.cpp  shell_session.h  shell_tokenizer.cpp  shell_tokenizer.h
entry/src/main/cpp/shell/builtins/: builtins.h  builtins_register.cpp  cmd_app.cpp  cmd_bg.cpp  cmd_box64.cpp  cmd_cat.cpp  cmd_cd.cpp  cmd_clear.cpp  cmd_echo.cpp  cmd_env.cpp  cmd_export.cpp  cmd_grep.cpp  cmd_head.cpp  cmd_help.cpp  cmd_history.cpp  cmd_jobs.cpp  cmd_kill.cpp  cmd_ls.cpp  cmd_procmgr.cpp  cmd_ps.cpp  cmd_pwd.cpp  cmd_status.cpp  cmd_tail.cpp  cmd_unset.cpp  cmd_wine.cpp  cmd_wine_setup.cpp  cmd_wineserver.cpp  cmd_wineserverctl.cpp
entry/src/main/cpp/tar/: tar_format.h  tar_napi.cpp  tar_napi.h  tar_reader.cpp  tar_reader.h  tar_writer.cpp  tar_writer.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/apprunnerability/: AppRunnerAbility.ets
entry/src/main/ets/clirunnerability/: CliRunnerAbility.ets
entry/src/main/ets/common/: KeyMap.ets  MouseMap.ets  Theme.ets
entry/src/main/ets/components/: BottomNav.ets  EditAppDialog.ets  EditContainerDialog.ets  FilesPage.ets  InstallAppDialog.ets  InstallContainerDialog.ets  InstallPage.ets  LibraryPage.ets  ProcManagerPage.ets  SettingsPage.ets  Sidebar.ets  SplashScreen.ets
entry/src/main/ets/entryability/: EntryAbility.ets  HBoxAbilityStage.ets
entry/src/main/ets/model/: AppInfo.ets  AppRegistry.ets  ContainerInfo.ets  RunningWindow.ets  ToolEnvStore.ets
entry/src/main/ets/pages/: AppRunner.ets  CliRunner.ets  ContainerManagerPage.ets  DebugPage.ets  DebugShellPage.ets  Index.ets
entry/src/main/ets/service/: CliService.ets  ContainerService.ets  FontStore.ets  InstallService.ets  LibStore.ets  PackageService.ets  ProcessManagerService.ets  ResourceService.ets  ShortcutService.ets  ToolDetector.ets  WaylandService.ets  WindowManagerService.ets  WineService.ets
entry/src/main/ets/shell/: PathResolver.ets  ShellEngine.ets  ShellRegistry.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/rawfile/term/: index.html  term.css  term.js
hpkbuilds/: cairo  freetype2  libpng  libwayland  pack_libs.py  pixman
